--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>PUT YOUR NAME HERE</title>
+		<title>R.K. Shenoy</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -24,7 +24,7 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>YOUR NAME HERE</h1>
+								<h1>R.K. Shenoy</h1>
 								<p>Welcome to my portfolio!</p>
 							</div>
 						</div>
@@ -46,7 +46,7 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>INTRO ABOUT WHAT YOU HAVE DONE IN DATA SCIENCE. Check out my <a href="#work">work</a>.</p>
+								<p>To further expand my knowledge within the data field , I recently enrolled in a program at Thinkful, for being engaged in content / projects not limited to data manipulation/cleaning, Data Visualization Supervised & Unsupervised Learning, Natural Language Processing, and Neural Networks.</p>
 							
 							</article>
 
@@ -54,9 +54,9 @@
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>DESCRIBE PROJECT<br><a href="putlinkhere">PROJECT NAME 1</a></p>
-								<p>DESCRIBE PROJECT<br><a href="putlinkhere">PROJECT NAME 2</a></p>
-								<p>DESCRIBE PROJECT<br><a href="putlinkhere">PROJECT NAME 3</a></p>
+								<p>DESCRIBE PROJECT<br><a href="https://colab.research.google.com/drive/1aJyQuXZr-DXw1YvNLyWR72_oJdkiqg7W?usp=sharing">Research on State Governors' Political Influence on the Containment of Covid-19 Cases</a></p>
+								<p>DESCRIBE PROJECT<br><a href="https://drive.google.com/file/d/1Zcdpv-XToUKTdsBdwWuAYGfdWK2veCMq/view?usp=sharing">Research on Largest Cities' Local Government Budget, Policing Policies, and Socioeconomic Factors on the Frequency of Police Violence Incidents</a></p>
+								<p>DESCRIBE PROJECT<br><a href="https://colab.research.google.com/drive/1g6vIWDZHrm9pnFrau0BaSmKObX5Q_hJ9?usp=sharing">2020 Stock Market Prediction: How the Clustering of ETFs By Industry Helps Determine Best Fit Model for Predicting Stock Price</a></p>
 							</article>
 
 						<!-- About -->
