--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>DESCRIBE PROJECT<br><a href="https://colab.research.google.com/drive/1aJyQuXZr-DXw1YvNLyWR72_oJdkiqg7W?usp=sharing">Research on State Governors' Political Influence on the Containment of Covid-19 Cases</a></p>
+								<p>The relevance of State Governors' political influence on the overall ratio of Covid-19 cases per population, what data sets are appropriate for the analysis, and the methodology required to perform the analysis.<br><a href="https://colab.research.google.com/drive/1aJyQuXZr-DXw1YvNLyWR72_oJdkiqg7W?usp=sharing">Research on State Governors' Political Influence on the Containment of Covid-19 Cases</a></p>
 								<p>DESCRIBE PROJECT<br><a href="https://drive.google.com/file/d/1Zcdpv-XToUKTdsBdwWuAYGfdWK2veCMq/view?usp=sharing">Research on Largest Cities' Local Government Budget, Policing Policies, and Socioeconomic Factors on the Frequency of Police Violence Incidents</a></p>
 								<p>DESCRIBE PROJECT<br><a href="https://colab.research.google.com/drive/1g6vIWDZHrm9pnFrau0BaSmKObX5Q_hJ9?usp=sharing">2020 Stock Market Prediction: How the Clustering of ETFs By Industry Helps Determine Best Fit Model for Predicting Stock Price</a></p>
 							</article>
